overflow fix

--- a/index.css
+++ b/index.css
@@ -42,7 +42,9 @@ header button{
 /* About me  */
 #about-me{
     background-color: #8e77d4;
-    padding: 1em;
+    max-width: 100vw;
+    overflow-y: hidden;
+    
 }
 
 /* Sections */
